namespace/media/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: media
  labels:
    app.kubernetes.io/name: nzbget
spec:
  selector:
    app.kubernetes.io/name: nzbget
  ports:
    - port: 6789
      targetPort: 6789
      protocol: TCP
      name: nzbget-ui
  type: ClusterIP
