namespace/media/nzbget/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nzbget.oglesby.io`)
      kind: Rule
      services:
        - name: nzbget
          port: 6789
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nzbget.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: nzbget
          port: 6789
